[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redis-ext"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Xiang Wang", email = "ramwin@qq.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Xiang Wang/redis-ext#readme"
Issues = "https://github.com/Xiang Wang/redis-ext/issues"
Source = "https://github.com/Xiang Wang/redis-ext"

[tool.hatch.version]
path = "src/redis_ext/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/redis_ext tests}"

[tool.coverage.run]
source_pkgs = ["redis_ext", "tests"]
branch = true
parallel = true
omit = [
  "src/redis_ext/__about__.py",
]

[tool.coverage.paths]
redis_ext = ["src/redis_ext", "*/redis-ext/src/redis_ext"]
tests = ["tests", "*/redis-ext/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
