[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "redis-ext-ramwin"
dynamic = ["version"]
description = "Redis list consumer with thread-pool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["redis>=5.0"]
[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov", "fakeredis[lua]"]
[project.urls]
Homepage = "https://github.com/ramwin/redis-ext"
Repository = "https://github.com/ramwin/redis-ext"
[tool.hatch.build.targets.wheel]
packages = ["src/redis_ext"]
[tool.hatch.envs.default]
dependencies = ["redis-ext[test]"]
[tool.hatch.envs.default.scripts]
test = "pytest -q"
cov = "pytest --cov=redis_ext --cov-report=term-missing"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers"
[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP", "B", "C90"]
[tool.hatch.version]
path = "src/redis_ext/__about__.py"
